# HarrisCornerDetection

./: CMakeLists.txt  README.md
include/: harrisCornerDetector.hpp  sobel.hpp
src/: CMakeLists.txt  harrisCornerDetector.cpp  main.cpp  sobel.cpp
